<resources>
    <string name="app_name">ProgettoProgrammazioneMobile</string>
    <string name="welcome">Benvenuto in Meet&amp;Kick !!</string>
    <string name="registrati"><b>Registrati!</b></string>
    <string name="logo">Logo</string>
    <string name="sesso">Sesso</string>
    <string name="nome">Nome</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="data_di_nascita">Data di Nascita</string>
    <string name="ruolo">Ruolo</string>
    <string name="telefono">Telefono</string>
    <string name="cognome">Cognome</string>
    <string name="login"><b>Login!</b></string>
    <string name="inserisci_le_tue_informazioni">Inserisci le tue informazioni!</string>
    <string name="modifica_profilo">Modifica</string>
    <string name="caricamento">Caricamento…</string>
    <string name="conferma_modifica">conferma</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="eventi_creati">Eventi creati</string>
    <string name="eventi_a_cui_partecipo">Partecipo a…</string>
    <string name="creatore">%1$s %2$s</string>
    <string name="titolo"><b>%1$s</b></string>
    <string name="elimina">Elimina</string>
</resources>