<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.ProfileActivity">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="169dp"
        android:clickable="true"
        android:contentDescription="profile_image"
        android:focusable="true"
        app:civ_border_color="@color/white"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/white"
        app:civ_shadow_radius="7dp"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mclaren"
        android:text="Ecco le tue informazioni"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <RelativeLayout
        android:id="@+id/contenitore_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/profile_rounded_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_above="@id/fab"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="info_profile"
            app:layout_constraintBottom_toTopOf="@id/fab">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/layout_form"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_nome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mclaren"
                        android:text="@string/nome"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_nome"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/caricamento"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/cognome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/layout_form"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_cognome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mclaren"
                        android:text="@string/cognome"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_cognome"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/caricamento"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/layout_form"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_telefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mclaren"
                        android:text="@string/telefono"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_telefono"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/caricamento"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ruolo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/layout_form"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_ruolo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mclaren"
                        android:text="@string/ruolo"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_ruolo"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/caricamento"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/sesso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/layout_form"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_sesso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mclaren"
                        android:text="@string/sesso"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_sesso"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/caricamento"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/data_nascita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/layout_form"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_data_nascita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mclaren"
                        android:text="Nato il..."
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_data_nascita"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/caricamento"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/layout_form"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mclaren"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_email"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/caricamento"
                        android:textSize="18sp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="20dp"
            android:elevation="45dp"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/edit_btn"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/verde_mimetico"
                android:fontFamily="@font/mclaren"
                android:gravity="center"
                android:src="@android:color/transparent"
                android:text="@string/modifica_profilo"
                android:textSize="15sp"
                app:icon="@drawable/profile_icon"></com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>